# pandox

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  README.md  Trunk.toml  build.rs  flake.nix  index.html  rust-toolchain.toml
content/test/: index.md
crates/pandox-components/: Cargo.toml  README.md
crates/pandox-components/src/components/: callout.rs
crates/pandox-log/: Cargo.toml
crates/pandox-log/src/: lib.rs
crates/pandox-macros/: Cargo.toml
crates/pandox-macros/src/: args.rs  assets.rs  dump.rs  lib.rs  render.rs  rewrite.rs  utils.rs
crates/pandox-markdown/: Cargo.toml  README.md
crates/pandox-markdown/src/: lib.rs  main.rs  parser.rs
crates/pandox-modules/: Cargo.toml
crates/pandox-modules/src/: lib.rs
crates/pandox-pandoc/: Cargo.toml  README.md
crates/pandox-pandoc/src/: lib.rs  parser.rs
crates/pandox-site/: Cargo.toml
crates/pandox-site/assets/: tailwind.css
crates/pandox-site/src/: lib.rs
crates/pandox-site/src/views/: home.rs
crates/pandox-ui/: Cargo.toml  README.md
crates/pandox-ui/src/: block.rs  hero.rs  lib.rs  navbar.rs
crates/pandox-ui/src/components/: callout.rs  hero.rs  mod.rs
crates/pandox-web/: Cargo.toml  README.md
crates/pandox-web/assets/: main.css
crates/pandox-web/src/: main.rs
crates/pandox-web/src/views/: blog.rs  home.rs  test.rs
crates/parser/: Cargo.toml  README.md
crates/parser/src/: lib.rs  main.rs  parser.rs
crates/ui/: Cargo.toml  README.md
crates/ui/src/: block.rs  lib.rs
crates/web/: Cargo.toml  build.rs
crates/web/src/: main.rs
crates/web/src/views/: home.rs  mod.rs  test.rs
docs/: icons-plan.md
modules/demo/: index.md
public/: styles.scss
public/test/: index.md
resources/: offline.html  serve.html
resources/modules/advanced/: index.md
resources/modules/blockquotes/: index.md
resources/modules/code/: index.md
resources/modules/demo/: index.md
resources/modules/lists/: index.md
resources/modules/media/: index.md
resources/modules/tables/: index.md
resources/modules/text-formatting/: index.md
resources/public/: styles.scss
scripts/: patch-offline.sh
src/: content.rs  lib.rs  main.rs  navigation.rs
src/components/: docs_layout.rs  mod.rs  sidebar.rs
src/pages/: home.rs  markdown.rs  mod.rs
src/views/: blog.rs  test.rs
templates/docx/: numbered-sections.docx
tools/patch-offline/: Cargo.toml
tools/patch-offline/src/: main.rs
