[package]
name = "pandox"
edition = "2024"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Albert O'Shea"]
readme = "README.md"

[workspace.lints]
rust.missing_docs = "warn"
rust.unused_crate_dependencies = "warn"

[workspace.dependencies]
dioxus = { version = "0.7", features = ["router"] }
dioxus-autofmt = "0.7"
dioxus-rsx = "0.7"
dioxus-rsx-rosetta = "0.7"
pandox-components = { path = "crates/pandox-components" }
pandox-macros = { path = "crates/pandox-macros" }
pandox-modules = { path = "crates/pandox-modules" }
pandox-pandoc = { path = "crates/pandox-pandoc" }
pandox-site = { path = "crates/pandox-site" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
dioxus = { workspace = true }
pandox-components = { workspace = true }
pandox-macros = { workspace = true }
pandox-pandoc = { workspace = true }
pandox-site = { workspace = true }
