[workspace]
members = [".", "tools/patch-offline"]

[package]
name = "bezel"
version = "0.1.0"
edition = "2024"
authors = ["Albert O'Shea <albertoshea2@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"

[patch.crates-io]
leptos_router = { git = "https://github.com/Alb-O/leptos", branch = "file-protocol-routing" }
leptos = { git = "https://github.com/Alb-O/leptos", branch = "file-protocol-routing" }
leptos_meta = { git = "https://github.com/Alb-O/leptos", branch = "file-protocol-routing" }

[workspace.lints.rust]
missing_docs = "warn"
unused_crate_dependencies = "warn"

[lints]
workspace = true

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


# [dev-dependencies]
# wasm-bindgen = "0.2"
# wasm-bindgen-test = "0.3"
# web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[build-dependencies]
pandoc = "0.8"
serde_json = "1.0"
walkdir = "2.5"
