[package]
name = "pandox-macros"
version = { workspace = true }
edition = { workspace = true }

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
pandox-markdown = { workspace = true }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
html_parser = "0.7"
dioxus-rsx-rosetta = "0.7"
dioxus-autofmt = "0.7"
