[package]
name = "pandox-macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
log.workspace = true
dioxus-autofmt = "0.7"
dioxus-rsx = "0.7"
dioxus-rsx-rosetta = "0.7"
html_parser = "0.7"
pandox-markdown = { workspace = true }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[lints]
workspace = true
