[package]
name = "parser"
version = "0.1.0"
edition = "2024"

[lib]
name = "parser"
path = "src/lib.rs"

[[bin]]
name = "parser"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
pandoc = "0.8.11"
pandoc_types = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
with_dir = "0.1.4"
