[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }
parser = { path = "../parser" }
pandoc_types = "0.6.0"
serde_json = "1.0"

[build-dependencies]
parser = { path = "../parser" }
pandoc_types = "0.6.0"
serde_json = "1.0"

[features]
default = ["web"]
web = ["dioxus/web"]

